# datasets

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: config.toml  test_config.toml
material_optical_constants/: Si-Franta-25C.yaml  Si.txt  SiO2-Franta.yaml
slurm/: run.sh  scp2local.sh  slurm_job.sh
src/datasets/: __init__.py  config.toml  eps_fit_lorentzian.py  materials.py  plot.py  shapes.py  simulate.py  simulator.py  utils.py
tests/: test_sim.py
