[project]
name = "datasets"
version = "0.1.0"
description = "Nanophotonic datasets"
readme = "README.md"
authors = [
    { name = "Prasanna Paithankar", email = "paithankarprasanna@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.15.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
    "toml>=0.10.2",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
gen_dataset = "datasets:simulate_dataset"
